# 3D-gravity

./: .clang-format  .gitignore  CMakeLists.txt
assets/data/: UI.yaml  boatParts.yaml  boats.yaml  crystals.yaml  enemies.yaml  house.yaml  keys.yaml  planets.yaml  players.yaml  stage0.yaml  stage1.yaml  stage2.yaml
assets/data/actor/: boatparts.yaml  boats.yaml  enemies.yaml  keys.yaml  npcs.yaml  planets.yaml  platforms.yaml  players.yaml  stars.yaml
assets/data/stage/: house.yaml  stage0.yaml  stage1.yaml  stage2.yaml
assets/data/ui/: ui.yaml
assets/models/: badMotherSlime.mtl  boat.assxml  boat.mtl  crystal.mtl  crystals.mtl  doctorSlime.mtl  enemy.mtl  house.mtl  key.mtl  motherSlime.mtl  planet.mtl  planet7.mtl  planet9.mtl  planet_2.fbx  planet_2.mtl  planet_3.fbx  planet_3.mtl  planet_main.mtl  platform.mtl  player.mtl  rocket.mtl  rocketParts1.mtl  rocketParts2.mtl  rocketParts3.mtl  rocketParts4.mtl  rocketParts5.mtl  selectField.mtl  skyBox.mtl  spaceSlime.mtl  star.mtl
md/: codingRule.md
md/reference/: assimp.md  bullet.md  design.md  math.md  matrix.md  openGL.md  yaml-cpp.md
shaders/: UIfragment.glsl  fragment.glsl  vertex.glsl
src/: Actor.cpp  Actor.h  AudioSystem.cpp  AudioSystem.h  Boat.cpp  Boat.h  BoatParts.cpp  BoatParts.h  CharacterActor.cpp  CharacterActor.h  CollectableComponent.cpp  CollectableComponent.h  Component.cpp  Component.h  Crystal.cpp  Crystal.h  DestructibleComponent.cpp  DestructibleComponent.h  Enemy.cpp  Enemy.h  FocusComponent.cpp  FocusComponent.h  Game.cpp  Game.h  GameProgressState.cpp  GameProgressState.h  Helper.cpp  Helper.h  JudgeLandingComponent.cpp  JudgeLandingComponent.h  Key.cpp  Key.h  Loader.cpp  Loader.h  Main.cpp  Mesh.cpp  Mesh.h  NPC.cpp  NPC.h  PhysicsSystem.cpp  (+40 more)
src/actor/: Actor.cpp  Actor.h  Boat.cpp  Boat.h  BoatParts.cpp  BoatParts.h  CharacterActor.cpp  CharacterActor.h  Crystal.cpp  Crystal.h  Enemy.cpp  Enemy.h  Key.cpp  Key.h  NPC.cpp  NPC.h  Planet.cpp  Planet.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Star.cpp  Star.h
src/component/: CollectableComponent.cpp  CollectableComponent.h  Component.cpp  Component.h  DestructibleComponent.cpp  DestructibleComponent.h  FocusComponent.cpp  FocusComponent.h  JudgeLandingComponent.cpp  JudgeLandingComponent.h  TalkableComponent.cpp  TalkableComponent.h
src/gfx/: Renderer.cpp  Renderer.h  Renderer3D.cpp  Renderer3D.h  Shader.cpp  Shader.h  Shader3D.cpp  Shader3D.h  UIRenderer.cpp  UIRenderer.h  UIShader.cpp  UIShader.h  VertexArray.cpp  VertexArray.h
src/state/: GameProgressState.cpp  GameProgressState.h  UIState.cpp  UIState.h
src/system/: ActorLoadSystem.cpp  ActorLoadSystem.h  AudioSystem.cpp  AudioSystem.h  CameraSystem.cpp  CameraSystem.h  Loader.cpp  Loader.h  Mesh.cpp  Mesh.h  MeshLoadSystem.cpp  MeshLoadSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  SceneSystem.cpp  SceneSystem.h  UILoadSystem.cpp  UILoadSystem.h  UILoader.cpp  UILoader.h
src/utils/: MathUtils.cpp  MathUtils.h
